Create control inputs and add them to the documentation (#77)
* Create control inputs code and documentation
* Add more JS advice to inputs doc
* Organize inputs.css file
* Fix disabled filled inputs

--- a/src/css/inputs.css
+++ b/src/css/inputs.css
@@ -1,5 +1,7 @@
 /* stylelint-disable no-descending-specificity */
 
+/* General input styles */
+
 .a-input {
   position: relative;
   display: flex;
@@ -31,6 +33,8 @@
   color: var(--color-moon-400);
 }
 
+/* Messaging inputs */
+
 .a-input--messaging {
   display: flex;
   flex-direction: row;
@@ -43,21 +47,62 @@
   flex: 1;
 }
 
-.a-input--validated > input {
-  border: 1px solid var(--color-earth-400);
+/* Ghost inputs */
+
+.a-input--ghost > input,
+.a-input.a-input--ghost > input:focus, /* Specificity hack to override focus style */
+.a-input--ghost.a-input--validated > input,
+.a-input--ghost.a-input--validated > input:focus,
+.a-input--ghost.a-input--invalid > input {
+  border: 1px solid var(--color-space-100);
+  background-color: transparent;
+  color: var(--color-space-100);
 }
 
-.a-input--validated > label {
-  color: var(--color-moon-400);
+.a-input--ghost > label,
+.a-input.a-input--ghost > input:focus + label, /* Specificity hack to override focus style */
+.a-input--ghost.a-input > input::placeholder,
+.a-input--ghost.a-input--validated > label,
+.a-input--ghost.a-input--validated > input:focus + label,
+.a-input--ghost.a-input--invalid > label,
+.a-input--ghost.a-input > .a-input__error {
+  color: var(--color-space-100);
 }
 
-.a-input--invalid > input {
-  border: 1px solid var(--color-mars-500);
+.a-input--ghost.a-input--validated::after,
+.a-input--ghost.a-input--invalid::after {
+  background-color: var(--color-space-100);
 }
 
-.a-input--invalid > label {
-  color: var(--color-mars-500);
+/* Control inputs */
+
+.a-input--control > input {
+  appearance: textfield;
+  padding-right: 87px;
 }
+
+.a-input--control > input::-webkit-inner-spin-button,
+.a-input--control > input::-webkit-outer-spin-button {
+  appearance: none;
+}
+
+.a-input--control__decrement {
+  position: absolute;
+  right: 54px;
+  top: 13px;
+}
+
+.a-input--control__increment {
+  position: absolute;
+  right: 15px;
+  top: 13px;
+}
+
+.a-input--control > input:not(:focus) ~ button i {
+  background-color: var(--color-moon-500);
+}
+
+/* Focus state */
 
 .a-input > input:focus,
 .a-input > textarea:focus {
@@ -73,18 +118,27 @@
   font-weight: 700;
 }
 
+/* Floating label state */
+
 .a-input > .a-input--floating-label {
   top: 8px;
   font-size: 12px;
   font-weight: 700;
 }
 
-.a-input--validated > input:focus + label {
-  color: var(--color-earth-400);
-}
+/* Validated state */
 
+.a-input--validated > input,
 .a-input--validated > input:focus {
   border: 1px solid var(--color-earth-400);
+}
+
+.a-input--validated > label {
+  color: var(--color-moon-300);
+}
+
+.a-input--validated > input:focus + label {
+  color: var(--color-earth-400);
 }
 
 .a-input--validated::after {
@@ -98,12 +152,16 @@
   background-color: var(--color-earth-400);
 }
 
-.a-input--invalid > input:focus + label {
-  color: var(--color-mars-500);
-}
+/* Invalid state */
 
+.a-input--invalid > input,
 .a-input--invalid > input:focus {
   border: 1px solid var(--color-mars-500);
+}
+
+.a-input--invalid > label,
+.a-input--invalid > input:focus + label {
+  color: var(--color-mars-500);
 }
 
 .a-input--invalid::after {
@@ -117,6 +175,8 @@
   mask-image: url('../../assets/icons/alert.svg');
 }
 
+/* Error state */
+
 .a-input > .a-input__error {
   position: relative;
   display: block;
@@ -126,11 +186,19 @@
   font-size: 12px;
 }
 
+/* Disabled state */
+
 .a-input--disabled > input:disabled,
 .a-input--disabled > textarea:disabled {
   cursor: not-allowed;
   border: 1px solid var(--color-moon-200);
   background-color: var(--color-moon-100);
+  color: var(--color-moon-300);
+}
+
+.a-input--disabled.a-input--validated::after,
+.a-input--disabled.a-input--invalid::after {
+  background-color: var(--color-moon-300);
 }
 
 .a-input--disabled > input:disabled::placeholder {
@@ -142,31 +210,4 @@
   cursor: not-allowed;
   color: var(--color-moon-300);
   font: var(--font-secondary);
-}
-
-/* Ghost inputs */
-
-.a-input--ghost > input,
-.a-input--ghost > input:focus,
-.a-input--ghost.a-input--validated > input,
-.a-input--ghost.a-input--validated > input:focus,
-.a-input--ghost.a-input--invalid > input {
-  border: 1px solid var(--color-space-100);
-  background-color: transparent;
-  color: var(--color-space-100);
-}
-
-.a-input--ghost > label,
-.a-input--ghost > input:focus + label,
-.a-input--ghost.a-input > input::placeholder,
-.a-input--ghost.a-input--validated > label,
-.a-input--ghost.a-input--validated > input:focus + label,
-.a-input--ghost.a-input--invalid > label,
-.a-input--ghost.a-input > .a-input__error {
-  color: var(--color-space-100);
-}
-
-.a-input--ghost.a-input--validated::after,
-.a-input--ghost.a-input--invalid::after {
-  background-color: var(--color-space-100);
 }
