--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,5 +1,13 @@
 :root {
-  --font-primary: normal normal 600 normal 16px/1.5 Poppins, sans-serif;
-  --font-secondary: normal normal 400 normal 16px/1.5 Lato, sans-serif;
+  --font-size-base: 8px;
+  --font-size-1-5base: calc(var(--font-size-base) * 1.5);
+  --font-size-2base: calc(var(--font-size-base) * 2);
+  --font-size-3base: calc(var(--font-size-base) * 3);
+  --font-size-4base: calc(var(--font-size-base) * 4);
+  --font-size-5base: calc(var(--font-size-base) * 5);
+  --font-size-6base: calc(var(--font-size-base) * 6);
+  --font-size-8base: calc(var(--font-size-base) * 8);
+  --font-primary: normal normal 600 normal var(--font-size-2base)/1.5 Poppins, sans-serif;
+  --font-secondary: normal normal 400 normal var(--font-size-2base)/1.5 Lato, sans-serif;
   --font-color: var(--color-moon-900);
 }
