Update Iconography with new icons (#120)
Introduce following icons: dollars, floater, circle more and circle less.

--- a/src/css/icons.css
+++ b/src/css/icons.css
@@ -275,3 +275,19 @@
 .a-icon__flag {
   mask-image: url(../../assets/icons/flag.svg);
 }
+
+.a-icon__dollars {
+  mask-image: url(../../assets/icons/dollars.svg);
+}
+
+.a-icon__circle-less {
+  mask-image: url(../../assets/icons/circle-less.svg);
+}
+
+.a-icon__circle-more {
+  mask-image: url(../../assets/icons/circle-more.svg);
+}
+
+.a-icon__floater {
+  mask-image: url(../../assets/icons/floater.svg);
+}
