--- a/src/css/inputs.css
+++ b/src/css/inputs.css
@@ -166,6 +166,68 @@
   background-color: var(--color-mars-400);
 }
 
+/* File inputs */
+
+.a-file-preview {
+  display: flex;
+}
+
+.a-file-preview__item {
+  background-color: var(--color-moon-100);
+  height: 80px;
+  width: 80px;
+  border-radius: 4px;
+  margin-right: 32px;
+  position: relative;
+  vertical-align: middle;
+  display: flex;
+  justify-content: middle;
+  align-items: center;
+}
+
+.a-file-preview__item img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.a-file-preview__item button {
+  position: absolute;
+  right: -6px;
+  top: -6px;
+  font-size: 12px;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  padding: 0;
+  border: 0;
+  cursor: pointer;
+  outline: none;
+}
+
+.a-file-preview__item i {
+  height: 20px;
+  width: 20px;
+  margin-left: -1px;
+  background-color: var(--color-moon-500);
+}
+
+.a-file-preview__item p {
+  font-size: calc(var(--font-size-base) * 1.25);
+  padding: 12px;
+  margin: 0;
+  word-wrap: break-word;
+  max-width: 80px;
+}
+
+.a-file-preview__item p.a-file-preview__item--text-truncate {
+  width: 80px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 /* Focus state */
 
 .a-input > input:focus,
